CIRC-1781 update logic with empty allowedServicePointsSet